--- a/packet.html
+++ b/packet.html
@@ -28,7 +28,7 @@
       <section id="work">
         <h2>work</h2>
         <Nav>
-        <nav class="work-cont" >
+        <nav class="work-container" >
           <nav class="work-item" >
             <a class="#HTML"  target="_blank" >HTML</a>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/640px-HTML5_logo_and_wordmark.svg.png" alt="no img" width="300">
